<resources>
  <string name="application">Live or Leave</string>
  <string name="attribution">by ImmobilienScout24</string>

  <string name="match_title">Dream Haus!</string>
  <string name="match_description">This property is a perfect match for you!</string>

  <string name="action_continue">Keep Swiping</string>
  <string name="action_like">Live</string>
  <string name="action_pass">Leave</string>
  <string name="action_revert">Cancel</string>
  <string name="action_view">View Property</string>

  <string name="connection_suspended_message">Connection failed</string>
  <string name="connection_failed_message">Connection failed</string>

  <string name="location_permission_title">Location Permission</string>
  <string name="location_permission_rationale">Location permission is required to find properties that are relevant to you in your area.</string>

  <string name="error_dialog_title">Error</string>
  <string name="error_positive_button">OK</string>

  <string name="error_permissions_unavailable">Location permission not granted</string>
  <string name="error_location_unavailable">Location unavailable</string>
  <string name="error_listings_unavailable">No listings available in this area</string>

  <string name="label_settings">Match Settings</string>
  <string name="label_settings_further_criteria">Further criteria</string>

  <string name="label_settings_what">What</string>
  <string name="label_settings_what_rent">Rent</string>
  <string name="label_settings_what_purchase">Purchase</string>

  <string name="label_settings_price">Net rent cold</string>
  <string name="label_settings_space">Living space</string>
  <string name="label_settings_rooms">Room(s)</string>

  <string name="hint_settings_range_min">From</string>
  <string name="hint_settings_range_max">To</string>

  <string name="hint_settings_additional_kitchen">Kitchen</string>
  <string name="hint_settings_additional_garage">Garage</string>
  <string name="hint_settings_additional_cellar">Cellar</string>
  <string name="hint_settings_additional_lift">Lift</string>
  <string name="hint_settings_additional_balcony">Balcony</string>
  <string name="hint_settings_additional_garden">Garden</string>
  <string name="hint_settings_additional_new_build">New build</string>

</resources>
