<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <de.scout.fireplace.settings.NumericRangeView
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:label="@string/label_settings_price"
        app:minHint="@string/hint_settings_range_min"
        app:maxHint="@string/hint_settings_range_max"/>

    <de.scout.fireplace.settings.NumericRangeView
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:label="@string/label_settings_space"
        app:minHint="@string/hint_settings_range_min"
        app:maxHint="@string/hint_settings_range_max"/>

    <de.scout.fireplace.settings.NumericRangeView
        android:id="@+id/rooms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:label="@string/label_settings_rooms"
        app:minHint="@string/hint_settings_range_min"
        app:maxHint="@string/hint_settings_range_max"/>

    <LinearLayout
        style="@style/Theme.Fireplace.Layout.Vertical.Margin"
        android:background="@color/colorPrimary"
        android:padding="@dimen/default_padding_double">

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/label_settings_further_criteria"
          android:textColor="@color/light_blue"/>

      <Switch
          android:id="@+id/criteria_kitchen"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/default_margin"
          android:layout_marginBottom="@dimen/default_margin"
          android:text="@string/hint_settings_additional_kitchen"
          android:textColor="@color/dark_grey"/>

      <Switch
          android:id="@+id/criteria_garage"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/default_margin"
          android:layout_marginBottom="@dimen/default_margin"
          android:text="@string/hint_settings_additional_garage"
          android:textColor="@color/dark_grey"/>

      <Switch
          android:id="@+id/criteria_cellar"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/default_margin"
          android:layout_marginBottom="@dimen/default_margin"
          android:text="@string/hint_settings_additional_cellar"
          android:textColor="@color/dark_grey"/>

      <Switch
          android:id="@+id/criteria_lift"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/default_margin"
          android:layout_marginBottom="@dimen/default_margin"
          android:text="@string/hint_settings_additional_lift"
          android:textColor="@color/dark_grey"/>

      <Switch
          android:id="@+id/criteria_balcony"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/default_margin"
          android:layout_marginBottom="@dimen/default_margin"
          android:text="@string/hint_settings_additional_balcony"
          android:textColor="@color/dark_grey"/>

      <Switch
          android:id="@+id/criteria_garden"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/default_margin"
          android:layout_marginBottom="@dimen/default_margin"
          android:text="@string/hint_settings_additional_garden"
          android:textColor="@color/dark_grey"/>

      <Switch
          android:id="@+id/criteria_new_build"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/default_margin"
          android:layout_marginBottom="@dimen/default_margin"
          android:text="@string/hint_settings_additional_new_build"
          android:textColor="@color/dark_grey"/>

    </LinearLayout>

  </LinearLayout>
</ScrollView>
