<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar"
    android:background="@android:color/transparent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/default_margin"
    android:fitsSystemWindows="true"
    app:elevation="0dp">

  <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/avatar"
        android:contentDescription="@string/application"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:src="@mipmap/ic_launcher"
        android:layout_gravity="start"
        android:visibility="gone"
        tools:visibility="visible"/>

    <LinearLayout
        style="@style/Theme.Fireplace.Layout.Vertical"
        android:gravity="center_horizontal">

      <TextView
          style="@style/Theme.Fireplace.TextAppearance.Headline"
          android:id="@+id/title"
          android:layout_margin="@null"
          android:text="@string/application"/>

      <TextView
          style="@style/Theme.Fireplace.TextAppearance.Standard"
          android:gravity="center_horizontal"
          android:text="@string/attribution"/>

    </LinearLayout>

    <ImageButton
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/action_settings"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/label_settings"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/ic_settings"
        android:layout_gravity="end"
        android:visibility="gone"
        tools:visibility="visible"/>

  </FrameLayout>


</android.support.design.widget.AppBarLayout>
